# beyond-ralph

./: .beyond_ralph_quota  .beyond_ralph_state  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MODULAR_SPEC.md  PROJECT_PLAN.md  PROJECT_PLAN_DETAILED.md  PROJECT_USAGE.md  QUICKSTART.md  README.md  SPEC.md  pyproject.toml
.claude/: beyond-ralph-claude-section.md  settings.json
.claude-plugin/: plugin.json
.claude/commands/: beyond-ralph-resume.md  beyond-ralph-status.md  beyond-ralph.md
.claude/hooks/: audit.py  hooks.json  post_compact_hook.py  quota-check.yaml  stop-hook.sh  stop.yaml  stop_hook.py
.claude/skills/: beyond-ralph-pause.yaml  beyond-ralph-resume.yaml  beyond-ralph-status.yaml  beyond-ralph.yaml
.serena/: project.yml
.serena/memories/: session_context.md
beyondralph_knowledge/: README.md  claude-code-plugin-system.md  compaction-recovery.md  interview-complete.md  interview-decisions.md  modular-spec-complete.md  phase5-research-items.md  project-started.md  spec-ingestion-complete.md  test-entry.md
commands/: pause.md  resume.md  start.md  status.md
docs/: PROJECT_PLAN.md  PROJECT_USAGE.md  SPECIFICATION.md
docs/developer/: ARCHITECTURE.md  agent-development.md  architecture.md  contributing.md  plugin-structure.md  release.md
docs/evidence/: process.md
docs/user/: configuration.md  installation.md  quickstart.md  testing.md  troubleshooting.md
hooks/: hooks.json
records/: README.md  TESTING_PLAN.md  test_coverage_status.md
records/.claude/: ralph-loop.local.md
records/agents/: research_agent.md  review_agent.md  spec.md  tasks.md
records/code-review/: spec.md  tasks.md
records/core/: spec.md  tasks.md
records/dynamic-plan/: spec.md  tasks.md
records/github-integration/: spec.md  tasks.md
records/hooks/: spec.md  tasks.md
records/knowledge/: spec.md  tasks.md
records/main/: tasks.md
records/notifications/: spec.md  tasks.md
records/orchestrator/: spec.md  tasks.md
records/plugin/: spec.md  tasks.md
records/quota/: spec.md  tasks.md
records/records-system/: spec.md  tasks.md
records/remote-access/: spec.md  tasks.md
records/research/: spec.md  tasks.md
records/session/: spec.md  tasks.md
records/skills/: spec.md  tasks.md
records/system-capabilities/: spec.md  tasks.md
records/testing/: spec.md  tasks.md
records/user-interaction/: spec.md  tasks.md
records/utils/: spec.md  tasks.md
scripts/: install-to-project.sh
skills/beyond-ralph/: SKILL.md
src/beyond_ralph/: __init__.py  cli.py  installer.py
src/beyond_ralph/agents/: __init__.py  base.py  phase_agents.py  research_agent.py  review_agent.py  review_agent.py.backup
src/beyond_ralph/core/: __init__.py  api_docs.py  audit.py  dynamic_plan.py  knowledge.py  notifications.py  orchestrator.py  principles.py  quota_manager.py  records.py  review_loop.py  session_manager.py  user_interaction.py
test_projects/hello_world/: .beyond_ralph_quota  .beyond_ralph_state  SPEC.md
tests/: __init__.py
tests/integration/: __init__.py  test_github.py  test_live_quota.py  test_live_session.py  test_live_sessions.py  test_remote_access.py  test_research.py  test_workflow.py
tests/live/: __init__.py  test_claude_code.py  test_github_live.py  test_remote_access_live.py  test_research_live.py
tests/unit/: __init__.py  test_agents.py  test_api_docs.py  test_audit.py  test_claude_driver.py  test_cli.py  test_dynamic_plan.py  test_github_integration.py  test_hooks.py  test_knowledge.py  test_notifications.py  test_orchestrator.py  test_phase_agents.py  test_principles.py  test_quota_checker.py  test_quota_manager.py  test_records.py  test_remote_access.py  test_research_agent.py  test_review_agent.py  test_review_loop.py  test_session_manager.py  test_skills_module.py  test_system.py  test_testing_skills.py  test_user_interaction.py
(+17 files in other folders)
